# lemmingpants

./: .gitignore  Dockerfile-backend  Dockerfile-db  Dockerfile-frontend  Makefile  README.md  TODO  agendaitems.sql  build_javascript.sh  default.nix  dev-server.sh  docker-build.sh  docker-compose.yml  init.sql  lemmingpants.cabal  lemmingpants.conf  package-lock.json  package.json  rollup.config.js  spec.md  stack.yaml  template.html  test.sql  websockets.conf
app/: Import.hs  Main.hs
conf.d/: nginx.conf
deployment/: Dockerfile  Dockerfile-db  Dockerfile-frontend  ansible.cfg  backend.json  backend_provision.yml  boot_full_image.sh  build-all.sh  build_all.sh  create_secret.sh  docker-build.sh  docker-compose.yml  frontend.json  frontend_provision.yml  run_backend.sh  setup_backend.sh  setup_frontend.sh
deployment/docker/: websockets.conf
deployment/files/: closure-compiler  create_secret.sh  init.sql  lemmingpants.conf  pg_tests  run_backend.sh  sql
docker/: init.sh  lemmingpants.conf  nginx.docker.conf
docs/: Makefile  spec.md
frontend/: .ackrc  .purs-repl  Makefile  bower.json  psc-package.json
frontend/random-modules/: Agenda.purs  MeetingAdmin.purs  SpeakerQueueStack.purs  Types.purs
frontend/src/: Agenda.purs  Coroutines.purs  Effects.purs  FormHelpers.purs  Forms.purs  Lemmingpants.purs  Main.purs  Postgrest.js  Postgrest.purs  Queue.purs  Types.purs  Utils.purs  Websockets.purs
frontend/src/Components/: Admin.js  Admin.purs  Forms.purs  Home.purs  Login.purs  Overhead.purs  Registration.purs  SpeakerQueue.js  SpeakerQueue.purs  Terminal.purs
frontend/src/Components/Admin/: ListAttendees.purs  ManageAgenda.purs  MeetingManager.purs  SpeakerQueue.purs
frontend/src/Components/Forms/: Field.purs
frontend/src/Forms/: Field.purs
frontend/src/Types/: Agenda.purs  Attendee.purs  Flash.purs  KPUpdates.purs  Lens.purs  Speaker.purs  SpeakerQueue.purs  Token.js  Token.purs  Websocket.purs
frontend/src/Views/: Admin.purs  Home.purs  Login.purs  Overhead.purs  Terminal.purs
frontend/styles/: main.scss
frontend/styles/base/: _lists.scss  _typography.scss  _variables.scss
frontend/test/: Main.purs
images/: Dockerfile-db  backend.json  backend_provision.yml
images/docker/: start.sh
lemmingtools/: .gitignore  ChangeLog.md  README.md  package.yaml  shell.nix  stack.yaml
lemmingtools/app/: Main.hs
lemmingtools/nix-support/: optparse-applicative-0.14.2.0.nix
lemmingtools/src/: Lib.hs
pg_tests/: Makefile  load-db.sh  pgtap.sql  run-tests.sh  test_setup.sql
pg_tests/sql/: test.sql
sql/: api.sql  example.sql  model.sql  role.sql
sql/api/: agenda_item.sql  attendee.sql  auth.sql  speaker.sql  speaker_queue.sql  websocket.sql
sql/model/: agenda_item.sql  attendee.sql  speaker.sql  speaker_queue.sql
src/: DB.hs  Lib.hs  Types.hs  admin.html
static/: index.html
static/admin/: index.html
static/js/: admin.js
static/js/admin/: Agenda.js  AttendeeList.js  SpeakerQueueStack.js  main.js
static/js/terminal/: main.js
static/terminal/: index.html
static/terminal/js/: terminal.js
