name:                lemmingpants
version:             0.1.0.0
homepage:            https://github.com/Rembane/lemmingpants#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          ekeroot@student.chalmers.se
copyright:           2017 Andreas Ekeroot
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DB, Lib, Types
  build-depends:       aeson >= 1.1.2.0,
                       base >= 4.8 && < 5,
                       bytestring >= 0.10.8.1,
                       containers >= 0.5.7.1,
                       directory >= 1.3.0.0,
                       errors >= 2.2.1,
                       exceptions >= 0.8.3,
                       http-media >= 0.6.4,
                       mtl >= 2.2.1,
                       servant >= 0.11,
                       servant-server >= 0.11,
                       stm >= 2.4.4.1,
                       text >= 1.2.2.2,
                       time >= 1.6.0.1,
                       unordered-containers >= 0.2.8.0,
                       wai-websockets >= 3.0.1.1,
                       websockets >= 0.12.3.1
  default-language:    Haskell2010

executable lemmingpants-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       lemmingpants,
                       servant,
                       servant-server,
                       stm,
                       wai >= 3.2.1.1,
                       wai-logger >= 2.3.0,
                       warp >= 3.2.13
  default-language:    Haskell2010

test-suite lemmingpants-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lemmingpants
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable lemmingpants-import-agenda
  hs-source-dirs:      app
  main-is:             Import.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       lemmingpants,
                       megaparsec >= 6.3.0,
                       stm,
                       text,
                       uuid
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Rembane/lemmingpants


